--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest ./dist/index.spec.js",
-    "build":"tsc"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,11 @@
   "devDependencies": {
     "jest": "^27.4.5",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "@types/jest": "^27.0.3"
   },
   "dependencies": {
-    "@types/jest": "^27.0.3"
+    "@types/moment": "^2.13.0",
+    "moment": "^2.29.1"
   }
 }
